--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
 
 
-    <title>Portfolio → BOLAJI AYODEJI</title>
+    <title>theabhinavgyan</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
