--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <!-- MENU LINKS -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="https://bolajiayodeji.com" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
+                    <li><a href="https://phenomenal1010.github.io/" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
                     <li><a href="#about" class="smoothScroll"><i class="ni ni-circle-08"></i> About Me</a></li>
                     <li><a href="#services" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
