--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="col-md-6 col-sm-12">
                 <div class="home-info">
 
-                    <h1 class="typewrite" data-period="200" data-type='[ "Hi, I&#39;m Bolaji Ayodeji.", "I&#39;m a Tech Geek", "I&#39;m a Front-end Developer", "I write code", "I Love contributing to Open Sourced Projects", "I Love to Design", "I&#39;m passionate about developing and designing brilliant innovative products", "Welcome to my portfolio", "Enjoy!"]'>
+                    <h1 class="typewrite" data-period="200" data-type='[ "Hi, I&#39;m Abhinav Gyan.", "I&#39;m a Gryffindor Wizard of House Targaryen", "I&#39;m a Front-end Developer", "I write code", "I Love contributing to Open Sourced Projects", "I Love to Design", "I&#39;m passionate about developing and designing brilliant innovative products", "Welcome to my portfolio", "Enjoy!"]'>
                         <span class="wrap"></span>
                     </h1>
 
