--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </button>
 
                 <!-- lOGO TEXT HERE -->
-                <a href="index.html" class="navbar-brand hvr-bounce-out"><i class="ni camera-compact"></i> BOLAJI
+                <a href="index.html" class="navbar-brand hvr-bounce-out"><i class="ni camera-compact"></i> Abhinav
                     &nbsp;<i class="fa fa-adn"></i></a>
             </div>
 
