--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
 
 
-    <title>theabhinavgyan</title>
+    <title>Abhinav Gyan</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -176,7 +176,7 @@
                             <h2>Quick Bio</h2>
                             <span class="line-bar">...</span>
                         </div>
-                        <p>Hello there! I'm Bolaji Ayodeji. </p>
+                        <p>Hello there! I'm Abhinav Gyan. </p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
                         <p>I'm passionate about developing and designing brilliant innovative products. 💡</p>
@@ -198,13 +198,13 @@
                         <h4>Photography <span class="pull-right"><i class="ni ni-camera-compact"></i></span></h4>
                         <hr>
 
-                        <h4>Digital Marketing <span class="pull-right"><i class="ni ni-spaceship"></i></span></h4>
+                        <h4>Anchoring <span class="pull-right"><i class="ni ni-spaceship"></i></span></h4>
                         <hr>
 
-                        <h4>Content Management <span class="pull-right"><i class="ni ni-single-copy-04"></i></span></h4>
+                        <h4>Gaming <span class="pull-right"><i class="ni ni-single-copy-04"></i></span></h4>
                         <hr>
 
-                        <h4>Technical Writing <span class="pull-right"><i class="ni ni-ruler-pencil"></i></span></h4>
+                        <h4>Dramatics <span class="pull-right"><i class="ni ni-ruler-pencil"></i></span></h4>
                         <hr>
 
                     </div>
@@ -212,7 +212,7 @@
 
                 <div class="col-md-4 col-sm-12 ">
                     <div>
-                        <img src="images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
+                        <img src="images/anhi.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
