--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 
                         <p>I write technical articles on my blog <a href="https://bolajiayodeji.com">www.bolajiayodeji.com</a></p><br />
 
-                        <a class="section-btn hvr-icon-forward" href="assets/resume.pdf ">Download Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
+                        <!-- <a class="section-btn hvr-icon-forward" href="assets/resume.pdf ">Download Resume <i class="fa fa-arrow-right hvr-icon "></i></a> -->
+                        <a href="#about" style="color:#000" ; class="btn section-btn smoothScroll hvr-icon-down">Get
+                        Started <i class="fa fa-chevron-circle-down hvr-icon"></i></a>
 
 
                     </div>
