--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <h4>Anchoring <span class="pull-right"><i class="ni ni-spaceship"></i></span></h4>
                         <hr>
 
-                        <h4>Gaming <span class="pull-right"><i class="ni ni-single-copy-04"></i></span></h4>
+                        <h4>Gaming <span class="pull-right"><i class="fas fa-futbol"></i></span></h4>
                         <hr>
 
                         <h4>Dramatics <span class="pull-right"><i class="ni ni-ruler-pencil"></i></span></h4>
