--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="section-title ">
                         <hr />
                         <br /><br /><br />
-                        <h2>Services</h2>
+                        <h2>Involvements and <br> Positions of Responsibilities</h2>
                         <span class="line-bar ">...</span>
                     </div>
                 </div>
