--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="section-title ">
                         <hr />
                         <br /><br /><br />
-                        <h2>Involvements and <br> Positions of Responsibilities</h2>
+                        <h2>Positions of Responsibilities</h2>
                         <span class="line-bar ">...</span>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image1.png " class="img-responsive " alt=" ">
-                            <h3>Web Design</a></h3>
+                            <h3>General Secretary SAAR</a></h3>
                             <p>Responsive website development that automatically scales up and down to meet the needs
                                 of whatever screen size it's on with great focus on user experience, optimization,
                                 speed
@@ -257,7 +257,7 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image2.png " class="img-responsive " alt=" "></a>
-                            <h3>UI/UX Design</a></h3>
+                            <h3>Students Welafare Secretary Gymkhana</a></h3>
                             <p>Professional yet creative design interface for product branding that reflects your
                                 company’s spirit and leaves a lasting, memorable effect.</p>
                         </div>
@@ -269,7 +269,7 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image3.png " class="img-responsive " alt=" "></a>
-                            <h3>Wordpress CMS</a></h3>
+                            <h3>Events Coordinator Anwesha'19</a></h3>
                             <p>Wordpress Content management system is a user-friendly administrative area allowing you
                                 to easily edit &
                                 manage your website's content.</p>
@@ -282,7 +282,7 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image4.png " class="img-responsive " alt=" "></a>
-                            <h3>Bot Development</a></h3>
+                            <h3>Hall Secretary Gymkhana</a></h3>
                             <p>Chat Bots development for easy, fast and digital customer service communication.</p>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image5.png " class="img-responsive " alt=" "></a>
-                            <h3>Content Management</a></h3>
+                            <h3>Web Developer ACE</a></h3>
                             <p>Content management, article write ups for product documentation, promotion and blogs.</p>
                         </div>
                     </div>
@@ -304,14 +304,14 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image6.png " class="img-responsive " alt=" "></a>
-                            <h3>Photography</a></h3>
+                            <h3>Cultural Sub-Coordinator Anwesha</a></h3>
                             <p>All types of classic photography can be created for your website. </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-6 col-sm-6 ">
-                    <!-- BLOG THUMB -->
+                <!-- <div class="col-md-6 col-sm-6 ">
+                    
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image7.png " class="img-responsive " alt=" "></a>
@@ -321,10 +321,10 @@
                                 acqusition.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-md-6 col-sm-6 ">
-                    <!-- BLOG THUMB -->
+                <!-- <div class="col-md-6 col-sm-6 ">
+                    
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image8.png " class="img-responsive " alt=" "></a>
@@ -334,7 +334,7 @@
                                 to ensure continous traffic count..</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
