--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
