--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
                         <h4>Photography <span class="pull-right"><i class="ni ni-camera-compact"></i></span></h4>
                         <hr>
 
-                        <h4>Anchoring <span class="pull-right"><i class="ni ni-spaceship"></i></span></h4>
+                        <h4>Anchoring <span class="pull-right"><i class="ni ni-single-02"></i></span></h4>
                         <hr>
 
-                        <h4>Gaming <span class="pull-right"><i class="fas fa-futbol"></i></span></h4>
+                        <h4>Gaming <span class="pull-right"><i class="ni ni-world"></i></span></h4>
                         <hr>
 
                         <h4>Dramatics <span class="pull-right"><i class="ni ni-ruler-pencil"></i></span></h4>
@@ -243,7 +243,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image1.png " class="img-responsive " alt=" ">
+                            <img src="images/serv/saar.jpg " class="img-responsive " alt=" ">
                             <h3>General Secretary SAAR</a></h3>
                             <p>Responsive website development that automatically scales up and down to meet the needs
                                 of whatever screen size it's on with great focus on user experience, optimization,
