--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image2.png " class="img-responsive " alt=" "></a>
+                            <img src="images/serv/iitp.jpg " class="img-responsive " alt=" "></a>
                             <h3>Students Welafare Secretary Gymkhana</a></h3>
                             <p>Professional yet creative design interface for product branding that reflects your
                                 company’s spirit and leaves a lasting, memorable effect.</p>
@@ -269,7 +269,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image3.png " class="img-responsive " alt=" "></a>
+                            <img src="images/serv/anw.jpg " class="img-responsive " alt=" "></a>
                             <h3>Events Coordinator Anwesha'19</a></h3>
                             <p>Wordpress Content management system is a user-friendly administrative area allowing you
                                 to easily edit &
@@ -282,7 +282,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image4.png " class="img-responsive " alt=" "></a>
+                            <img src="images/serv/iitp.jpg " class="img-responsive " alt=" "></a>
                             <h3>Hall Secretary Gymkhana</a></h3>
                             <p>Chat Bots development for easy, fast and digital customer service communication.</p>
                         </div>
@@ -293,7 +293,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image5.png " class="img-responsive " alt=" "></a>
+                            <img src="images/serv/ace.jpg " class="img-responsive " alt=" "></a>
                             <h3>Web Developer ACE</a></h3>
                             <p>Content management, article write ups for product documentation, promotion and blogs.</p>
                         </div>
@@ -304,7 +304,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
-                            <img src="images/serv/blog-image6.png " class="img-responsive " alt=" "></a>
+                            <img src="images/serv/anw.jpg " class="img-responsive " alt=" "></a>
                             <h3>Cultural Sub-Coordinator Anwesha</a></h3>
                             <p>All types of classic photography can be created for your website. </p>
                         </div>
